@@ -1,6 +1,6 @@
 // $Id$
 
-project (CIF_Common) : ccm_configvalue, ciao_logger, naming {
+project (CIF_Common) : ccm_configvalue, ciao_logger, naming, ciao_base {
   dynamicflags += CIF_COMMON_BUILD_DLL
   sharedname = CIF_Common
   includes += ..
