@@ -1,3 +1,11 @@
+Mon Sep 13 09:57:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/CIF/Common/CIF_Common.cpp:
+        * tests/CIF/Common/CIF_Common.mpc:
+        * tests/CIF/Navigation/client.cpp:
+        * tests/CIF/Receptacle/client.cpp:
+          Added Client_init in order to rid of the MARSHAL exceptions.
+
 Sun Sep 12 19:20:28 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tests/DAnCE/Components/ProcessColocation_exec.cpp:
